fix: hide content-type icon on mobile

--- a/src/components/command-bar/commands/search/unified-search/components/unified-hit/unified-hit.module.css
+++ b/src/components/command-bar/commands/search/unified-search/components/unified-hit/unified-hit.module.css
@@ -25,6 +25,10 @@
 	flex-shrink: 0;
 	position: relative;
 	top: 4px;
+
+	@media (--dev-dot-mobile) {
+		display: none;
+	}
 }
 
 .content {
